--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 	layout=twoside ,
 	titlepage=true ,
 	preamble=false ,
-	draftmode=true ,
+	draftmode=false ,
 ]{sbmthesis}
 \setlength\headheight{30pt} % required, do not delete
 
@@ -27,20 +27,23 @@
     
     \include{chapters/01_Introduction}
     \cleardoublepage
+
+    \include{chapters/02_Fundamental_Concepts}
+    \cleardoublepage
     
-    \include{chapters/02_State_of_the_Art}
+    \include{chapters/03_State_of_the_Art}
     \cleardoublepage
 
-    \include{chapters/03_Methodology_System_Design}
+    \include{chapters/04_Methodology_System_Design}
     \cleardoublepage
 
-    \include{chapters/04_Simulation_Setup_Implemenation}
+    \include{chapters/05_Simulation_Setup_Implemenation}
     \cleardoublepage
 
-    \include{chapters/05_Results_Discussion}
+    \include{chapters/06_Results_Discussion}
     \cleardoublepage
 
-    \include{chapters/06_Conclusion_Outlook}
+    \include{chapters/07_Summary_Outlook}
     \cleardoublepage
 
     \appendix
