--- a/mandatory/acronyms.tex
+++ b/mandatory/acronyms.tex
@@ -192,6 +192,30 @@
   extra               = {A European reference database providing emission factors for various traffic situations and vehicle categories}
 }
 
+\DeclareAcronym{co2}{
+  short               = CO$_2$,
+  long                = Carbon dioxide,
+  short-plural-form   = CO$_2$ emissions,
+  long-plural-form    = Carbon dioxide emissions,
+  extra               = {A greenhouse gas emitted from the combustion of fossil fuels in vehicles, commonly used as a key indicator for environmental impact in transportation studies}
+}
+
+\DeclareAcronym{nox}{
+  short               = NO$_x$,
+  long                = Nitrogen oxides,
+  short-plural-form   = NO$_x$ emissions,
+  long-plural-form    = Nitrogen oxides emissions,
+  extra               = {A collective term for nitric oxide (NO) and nitrogen dioxide (NO$_2$), both of which are major air pollutants produced by vehicle engines and associated with adverse health and environmental effects}
+}
+
+\DeclareAcronym{marl}{
+  short               = MARL,
+  long                = Multi-Agent Reinforcement Learning,
+  short-plural-form   = MARL methods,
+  long-plural-form    = Multi-Agent Reinforcement Learning methods,
+  extra               = {A reinforcement learning framework involving multiple autonomous agents that learn through interaction with each other and their environment}
+}
+
 \DeclareAcronym{obd}{
   short               = OBD,
   long                = On-Board Diagnostics,
@@ -199,6 +223,23 @@
   long-plural-form   = On-Board Diagnostics systems,
   extra              = {An automotive term referring to a vehicle’s self-diagnostic and reporting capability, used to monitor and analyze engine and component performance}
 }
+
+\DeclareAcronym{mpr}{
+  short = MPR ,
+  long  = Market Penetration Rate ,
+  short-plural-form = MPRs ,
+  long-plural-form  = Market Penetration Rates ,
+  extra = {Percentage of vehicles in the traffic stream equipped with a specific technology or system, such as \ac{glosa}}
+}
+
+\DeclareAcronym{fot}{
+  short               = FOT,
+  long                = Field Operational Test,
+  short-plural-form   = FOTs,
+  long-plural-form    = Field Operational Tests,
+  extra               = {Real-world testing programs conducted under operational conditions to assess the effectiveness, efficiency, and impacts of new technologies or methods}
+}
+
 
 \DeclareAcronym{phem}{
   short               = PHEM,
@@ -415,4 +456,12 @@
   short-plural-form   = CAVs ,
   long-plural-form    = Connected and Automated Vehicles ,
   extra               = {Vehicles equipped with connectivity and automation technologies that allow them to communicate with other vehicles, infrastructure, and control systems, enhancing safety, efficiency and environmental performance.}
+}
+
+\DeclareAcronym{sdp}{
+  short               = SDP ,
+  long                = Stochastic Dynamic Programming ,
+  short-plural-form   = SDP methods ,
+  long-plural-form    = Stochastic Dynamic Programming methods ,
+  extra               = {A mathematical approach that incorporates random variables and probability distributions to solve dynamic optimization problems where system parameters or outcomes are subject to uncertainty.}
 }
